Updated angular.json with extra deploy options, changed app prefix option, and removed some style imports in favor of moving them into styles.scss + changed routing to default to and redirect to empty path + fixed a small bug where scroll to top button was hidden behind some elements in mobile

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -31,6 +31,7 @@
   border-radius: 50px;
   transition: all 0.4s;
   cursor: pointer;
+  z-index: 5;
 
   fa-icon {
     font-size: 24px;
